# BotheadStudios

./: .gitignore  README.md  SECURITY.md
.github/workflows/: ci.yml  pages.yml
greenfield-engine/: CHANGELOG.md  CLAUDE.md  JOURNAL.md
greenfield-engine/crates/engine/: Cargo.toml
greenfield-engine/crates/engine/src/: accretion.rs  aggregate.rs  atmosphere.rs  bhtree.rs  body.rs  damage.rs  emission.rs  eos.rs  gpu_sph.rs  granular.rs  gravity.rs  hydrostatic.rs  impact.rs  lib.rs  materials.rs  matter.rs  mesher.rs  neighbors.rs  orbit.rs  planet.rs  texture.rs  tides.rs  world.rs
greenfield-engine/crates/engine/src/terra/: fly_camera.rs  mod.rs  world_def.rs
greenfield-engine/data/: materials.json
greenfield-engine/docs/: 04-materials-model.md  05-data-pipeline.md  06-material-modules.md  12-textures.md  14-validation-demonstrations.md  18-unified-deformation-and-damage.md  20-impact-thermodynamics.md  21-bodies-as-particle-aggregates.md  23-everything-is-matter-north-star.md  24-emergent-impact.md  28-missing-impact-physics.md  30-accelerated-compute-module.md  31-isotopic-crisis.md  32-architecture-map.md  33-architecture-realignment.md  34-stage-4c-pickup.md  35-gpu-path-migration.md  36-gpu-barnes-hut-spec.md  37-gpu-barnes-hut-findings.md  39-planetary-scale-jit-particalization.md  40-converge-earth-fraction-pickup.md  41-earth-fraction-converged.md  42-pretty-render-layer.md  43-worlds-as-data.md
greenfield-engine/scripts/: test.sh
greenfield-engine/shaders/: bh_gravity.wgsl  particle_step.wgsl  particles.wgsl  sky.wgsl  space.wgsl  sph_render.wgsl  sph_step.wgsl  world.wgsl
greenfield-engine/tools/: shot-server.mjs
greenfield-engine/tools/gpu-bh-verify/: Cargo.toml
greenfield-engine/tools/gpu-verify/: Cargo.toml
greenfield-engine/tools/gpu-verify/src/: main.rs
greenfield-engine/tools/impact-run/: Cargo.toml
greenfield-engine/tools/impact-run/src/: main.rs
greenfield-engine/tools/sph-verify/: Cargo.toml
greenfield-engine/tools/sph-verify/src/: main.rs
greenfield-engine/web/: birth.html  index.html  orbit.html  package-lock.json  package.json  screenshot.mjs  terrain.html  twomoons.html  vite.config.ts
greenfield-engine/web/public/worlds/earth/: world.json
greenfield-engine/web/public/worlds/one-moon/: world.json
greenfield-engine/web/public/worlds/two-moons/: world.json
greenfield-engine/web/rig/: birth_check.mjs  birth_geologic.mjs  birth_gpu.mjs  birth_long.mjs  birth_shot.mjs  collapse_check.mjs  ejecta_blanket.mjs  escape_check.mjs  flicker.mjs  furrow.mjs  ghost.mjs  gpu_energy_trace.mjs  meteoraim.mjs  moon_shot.mjs  moon_track.mjs  moon_track2.mjs  moon_track3.mjs  orbit_check.mjs  parity_check.mjs  pretty_slider.mjs  prov.mjs  simhud.mjs  sky.mjs  sph_energy.mjs  sph_impact.mjs  terra.mjs  terra_annulus.mjs  terra_controls.mjs  terra_fly.mjs  verify.mjs  worlds_space.mjs  zoom_check.mjs
greenfield-engine/web/src/: landing.ts  main.ts  orbit.ts  scene-nav.ts  sim-hud.ts  terra.ts  vite-env.d.ts
integrity-engine/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  JOURNAL.md  README.md
integrity-engine/.claude/: settings.json
integrity-engine/assets/bodies/: proto-earth.json
integrity-engine/crates/engine/: Cargo.toml
integrity-engine/crates/engine/src/: aggregate.rs  arc.rs  atmosphere.rs  axle.rs  blackbody.rs  body.rs  clock.rs  eos.rs  geo.rs  gpu_gravity.rs  gpu_host.rs  gpu_layout.rs  gpu_particles.rs  gpu_sph.rs  granular.rs  ground_scene.rs  hydrostatic.rs  impact.rs  interaction.rs  intercept.rs  isotropy.rs  laws.rs  lib.rs  materials.rs  matter.rs  mesher.rs  orbit.rs  planet.rs  recohere.rs  refine.rs  render.rs  simulation.rs  site.rs  sky.rs  surface_detail.rs  texture.rs  tides.rs  world.rs
integrity-engine/crates/engine/src/terra/: fly_camera.rs  globe_mesh.rs  ground_cap.rs  raster.rs  world_def.rs
integrity-engine/data/: materials.json
integrity-engine/docs/: 00-laws-of-integrity.md  03-versioning.md  04-materials-model.md  13-scale-relative-simulation.md  32-architecture-map.md  33-architecture-realignment.md  37-gpu-barnes-hut-findings.md  38-terrain-gpu-unification.md  44-resolution-by-necessity.md  45-terrain-slope-stability.md  46-one-physics-charter.md  47-go-kart-and-particle-granularity.md  48-the-atmosphere-is-built-and-unwired.md  52-the-standalone-engine.md  55-the-ground-scene.md  57-law-conformance-burndown.md  58-the-generic-body.md  59-the-zoom.md  60-the-one-deposition-door.md  61-site-recoherence.md
integrity-engine/scripts/: deploy.sh  dev-lan.sh  rig.sh  test.sh
integrity-engine/shaders/: bh_gravity.wgsl  globe.wgsl  particle_step.wgsl  stars.wgsl  surface_normal.wgsl  world.wgsl
integrity-engine/tools/gpu-bh-verify/src/: main.rs
integrity-engine/tools/gpu-verify/: Cargo.toml
integrity-engine/tools/gpu-verify/.cargo/: config.toml
integrity-engine/tools/gpu-verify/src/: main.rs
integrity-engine/web/: birth.html  gpu-probe.html  ground.html  groundzero.html  index.html  moondrop.html  orbit.html  package-lock.json  package.json  terra.html  terrain.html  twomoons.html  vite.config.ts
integrity-engine/web/public/sky/: SOURCES.txt
integrity-engine/web/public/worlds/birth/: world.json
integrity-engine/web/rig/: _launch.mjs  all_scenes.mjs  birth_all.mjs  birth_check.mjs  birth_geologic.mjs  birth_gpu.mjs  birth_long.mjs  birth_long_wait.mjs  birth_shot.mjs  birth_status.mjs  birth_wait.mjs  bug2_diag.mjs  bug_terrain.mjs  cam_ground.mjs  camera_controls.mjs  camverify.mjs  collapse_check.mjs  crater.mjs  crater1.mjs  crater_lips.mjs  debris_container.mjs  dig_hill.mjs  dissolve.mjs  ejecta_blanket.mjs  escape_check.mjs  final.mjs  flicker.mjs  floaters.mjs  fps.mjs  fps_check.mjs  frame_check.mjs  furrow.mjs  geo.mjs  ghost.mjs  gpu_energy_trace.mjs  gpu_probe.mjs  ground_ball_shatter.mjs  ground_scene.mjs  ground_settle_shot.mjs  groundzero_window.mjs  (+50 more)
integrity-engine/web/src/: base-url.ts  camera-input.ts  dev-log.ts  gpu-probe.ts  ground.ts  landing.ts  orbit.ts  scene-nav.ts  share-view.ts  terra.ts
(+4 files in other folders)
