[package]
name = "engine"
# Source of truth for the engine version. See docs/03-versioning.md.
version = "0.9.0"
edition.workspace = true
license.workspace = true
description = "Integrity engine core: matter simulation + wgpu renderer, compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
glam = "0.29"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fast-surface-nets = "0.2"
ndshape = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlCanvasElement", "Window", "Document"]

# **Target-specific GPU backends (docs/52).** The engine is not a browser program that happens to
# compile elsewhere; it is a standalone engine of which the browser is one host. So each target gets the
# backend it can actually RUN on:
#
#  * wasm32 — WebGPU only. Keeps the wasm small and is the only backend a browser has.
#  * everything else — wgpu's defaults, which is what `tools/gpu-verify` already uses to drive real
#    Vulkan on this box. (There is no `vulkan` cargo feature: on Linux wgpu enables it by platform.)
#
# Target-specific tables are used rather than a cargo feature flag because **features unify across a
# build graph and targets do not**. That is the exact hazard `tools/gpu-verify` was pushed into its own
# workspace to avoid — a native backend leaking into the browser build. Here it cannot: nothing that
# builds for wasm32 can see the native table.
[target.'cfg(target_arch = "wasm32")'.dependencies.wgpu]
version = "24"
default-features = false
features = ["webgpu", "wgsl"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.wgpu]
version = "24"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.pollster]
version = "0.4"
